welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:5: error: forward reference extends over definition of variable diag
		for (i <- 1 to diag){
                               ^